Changed the use of Set to List for CauseCode in DenmApplication, as well as updating the rest of the quadTree-references to use List as well