@@ -118,7 +118,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock"
 				),
 				metadata
@@ -160,7 +160,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock"
 				),
 				metadata1
@@ -177,7 +177,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"SE",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock"
 				),
 				metadata2
@@ -229,7 +229,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock"
 				),
 				metadata1
@@ -246,7 +246,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"SE",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock"
 				),
 				metadata2
@@ -310,7 +310,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"SE",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock"
 				),
 				metadata
@@ -357,7 +357,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock"
 				),
 				metadata
@@ -398,7 +398,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock"
 				),
 				metadata1
@@ -415,7 +415,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"SE",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock"
 				),
 				metadata2
@@ -423,7 +423,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		client.createHeadersExchange("cap-ex3");
 
 		ServiceProvider sp = new ServiceProvider("sp");
-		sp.setCapabilities(new Capabilities(Capabilities.CapabilitiesStatus.KNOWN, new HashSet<>(Arrays.asList(cap1, cap2))));
+		sp.setCapabilities(new Capabilities(Capabilities.CapabilitiesStatus.KNOWN, Set.of(cap1, cap2)));
 
 		HashSet<NeighbourSubscription> subs = new HashSet<>();
 		NeighbourSubscription sub1 = new NeighbourSubscription("(quadTree like '%,01230123%' OR quadTree like '%,01230122%') " +
@@ -474,7 +474,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230123")),
+						List.of("01230123"),
 						"RoadBlock"
 				),
 				metadata1
@@ -491,7 +491,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122")),
+						List.of("01230122"),
 						"RoadBlock"
 				),
 				metadata2
@@ -499,7 +499,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		client.createHeadersExchange("cap-ex5");
 
 		ServiceProvider sp = new ServiceProvider("sp");
-		sp.setCapabilities(new Capabilities(Capabilities.CapabilitiesStatus.KNOWN, new HashSet<>(Arrays.asList(cap1, cap2))));
+		sp.setCapabilities(new Capabilities(Capabilities.CapabilitiesStatus.KNOWN, Set.of(cap1, cap2)));
 
 		HashSet<NeighbourSubscription> subs = new HashSet<>();
 		NeighbourSubscription sub = new NeighbourSubscription("(quadTree like '%,01230123%' OR quadTree like '%,01230122%') " +
@@ -533,7 +533,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock"
 				),
 				metadata
@@ -573,7 +573,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock"
 				),
 				metadata1
@@ -590,7 +590,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"SE",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock"
 				),
 				metadata2
@@ -598,7 +598,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		client.createHeadersExchange("cap-ex8");
 
 		ServiceProvider sp = new ServiceProvider("sp");
-		sp.setCapabilities(new Capabilities(Capabilities.CapabilitiesStatus.KNOWN, new HashSet<>(Arrays.asList(cap1, cap2))));
+		sp.setCapabilities(new Capabilities(Capabilities.CapabilitiesStatus.KNOWN, Set.of(cap1, cap2)));
 
 		NeighbourSubscription sub1 = new NeighbourSubscription("(quadTree like '%,01230123%' OR quadTree like '%,01230122%') " +
 				"AND publicationType = 'RoadBlock' " +
@@ -640,7 +640,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock"
 				),
 				metadata
@@ -692,7 +692,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock"
 				),
 				metadata
@@ -748,8 +748,8 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"DENM:1.2.2",
-						new HashSet<>(Arrays.asList("12004")),
-						new HashSet<>(Arrays.asList(6))
+						List.of("12004"),
+						List.of(6)
 				),
 				metadata
 		);
@@ -1030,8 +1030,8 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"NO0000:001",
 						"NO",
 						"1.0",
-						Collections.singleton("0122"),
-						Collections.singleton(1)
+						List.of("0122"),
+						List.of(1)
 				),
 				new Metadata(RedirectStatus.NOT_AVAILABLE)
 		);
